--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "expo": "~50.0.17",
+    "expo-clipboard": "~5.0.1",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
     "expo-linking": "~6.2.2",
