--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "clsx": "^2.1.1",
     "expo": "~50.0.17",
     "expo-clipboard": "~5.0.1",
+    "expo-file-system": "~16.0.9",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
     "expo-linking": "~6.2.2",
+    "expo-media-library": "~15.9.2",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
